@startuml es 6

class Pagamento{
+ processa pagamento 

}
class CartaDiCredito{

    + nome_intestatario
    + numero_carta
    + scadenza
    - cvv
}
class Paypal{

    +email : email
    -password : password

    + processa_pagamento(self)

    + effettua_pagamento(metodo_di_pagamento: Pagamento)
    }
Pagamento<|--Paypal
Pagamento<|--CartaDiCredito
@enduml